added bamazon app

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Bootstrap-Portfolio"]
 	path = Bootstrap-Portfolio
 	url = https://github.com/sweedishhfish04/Bootstrap-Portfolio.git
+[submodule "bamazon"]
+	path = bamazon
+	url = https://github.com/sweedishhfish04/bamazon
